build: competible with 0.63

--- a/android/src/main/res/layout/activity_open_note_scanner.xml
+++ b/android/src/main/res/layout/activity_open_note_scanner.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FF000000"
+    android:background="@android:color/transparent"
     tools:context=".OpenNoteScannerActivity">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
